# typeddict-to-json

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_typeddict_to_json.py
typeddict_to_json/: __init__.py  annotation.py  schema.py
